--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -115,10 +115,10 @@
         {%- else -%}
 
           <div class="page-banner-default">
-            <h1 class="page-banner-heading">
+            <h1 class="page-banner-heading" style="font-size: 4rem;">
               {{ heading | default: page.title | escape }}
             </h1>
-            <h2 class="page-banner-subheading">
+            <h2 class="page-banner-subheading" style="font-size: 0.75rem;">
               {{ subheading | default: page.subtitle | escape }}
             </h2>
           </div>
