포스팅 테스트

--- a/_includes/sidebar/article-menu.html
+++ b/_includes/sidebar/article-menu.html
@@ -7,8 +7,10 @@
 </style>
 
 <div class="post-menu">
-  <div class="post-menu-title">TOC</div>
+  <div class="post-menu-title" style="text-decoration: underline;">Table of Contents</div>
+  <!-- <div style="text-align: center; font-size: x-large; font-weight: bold; text-decoration: underline;">Table of Contents</div> -->
   <div class="post-menu-content"></div>
+  <br><br>
 </div>
 
 <script>
